<resources>
    <string name="app_name">Minesweeper</string>
    <string name="position">Position</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="best_times">Best Times</string>
    <string name="reset_all">Reset All</string>
    <string name="difficulty_message">Select a difficulty:</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="best_time_input_hint">Enter your name</string>
    <string name="new_best_time_message">"New best time!"</string>
    <string name="you_won_message">You won!</string>
    <string name="submit">Submit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirmation">Are you sure you want to reset all best times?</string>
</resources>
