<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<!--        <variable-->
<!--            name="viewModel"-->
<!--            type="com.example.minesweeper_android.MainViewModel" />-->

<!--        <import type="com.example.minesweeper_android.Difficulty" />-->

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_screen_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/main_screen_mine_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_mine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/welcome_message"
            android:textSize="26sp"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_screen_mine_image_view" />

        <TextView
            android:id="@+id/select_a_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/difficulty_message"
            android:textSize="14sp"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_message" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/select_a_difficulty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/beginner_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/beginner"
                android:textSize="20sp"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@id/intermediate_button"
                app:layout_constraintStart_toStartOf="@id/intermediate_button"
                app:layout_constraintTop_toTopOf="parent" />

<!--            android:onClick="@{() -> viewModel.difficultySelected(Difficulty.BEGINNER)}"-->


            <Button
                android:id="@+id/intermediate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/intermediate"
                android:textSize="20sp"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/beginner_button" />

<!--            android:onClick="@{() -> viewModel.difficultySelected(Difficulty.INTERMEDIATE)}"-->


            <Button
                android:id="@+id/advanced_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/advanced"
                android:textSize="20sp"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@id/intermediate_button"
                app:layout_constraintStart_toStartOf="@id/intermediate_button"
                app:layout_constraintTop_toBottomOf="@id/intermediate_button" />

<!--            android:onClick="@{() -> viewModel.difficultySelected(Difficulty.ADVANCED)}"-->


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/footer_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.1">

            <Button
                android:id="@+id/best_times_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/best_times"
                android:textSize="16sp"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

<!--            android:onClick="@{() -> viewModel.bestTimesButtonPressed()}"-->


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>